updated the toolkit

--- a/index.html
+++ b/index.html
@@ -146,24 +146,6 @@
             <ul class="skill__list">
               <li>
                 <div class="list--box">
-                  <i class="devicon-html5-plain"></i>
-                  <p>HTML5</p>
-                </div>
-              </li>
-              <li>
-                <div class="list--box">
-                  <i class="devicon-css3-plain"></i>
-                  <p>CSS3</p>
-                </div>
-              </li>
-              <li>
-                <div class="list--box">
-                  <i class="devicon-sass-original"></i>
-                  <p>SASS</p>
-                </div>
-              </li>
-              <li>
-                <div class="list--box">
                   <i class="devicon-javascript-plain"></i>
                   <p>JavaScript</p>
                 </div>
@@ -182,23 +164,17 @@
               </li>
               <li>
                 <div class="list--box">
+                  <i class="devicon-nodejs-plain"></i>
+                  <p>Node.js</p>
+                </div>
+              </li>
+              <li>
+                <div class="list--box">
                   <i class="devicon-jest-plain"></i>
                   <p>Jest</p>
                 </div>
               </li>
 
-              <li>
-                <div class="list--box">
-                  <i class="devicon-git-plain"></i>
-                  <p>Git</p>
-                </div>
-              </li>
-              <li>
-                <div class="list--box">
-                  <i class="devicon-github-original"></i>
-                  <p>Github</p>
-                </div>
-              </li>
               <li>
                 <div class="list--box">
                   <i class="devicon-firebase-plain"></i>
@@ -207,14 +183,39 @@
               </li>
               <li>
                 <div class="list--box">
-                  <i class="devicon-figma-plain"></i>
-                  <p>Figma</p>
+                  <i class="devicon-mongodb-plain"></i>
+                  <p>MongoDB</p>
                 </div>
               </li>
               <li>
                 <div class="list--box">
-                  <i class="devicon-maya-plain"></i>
-                  <p>Maya</p>
+                  <i class="devicon-figma-plain"></i>
+                  <p>Figma</p>
+                </div>
+              </li>
+
+              <li>
+                <div class="list--box">
+                  <i class="devicon-html5-plain"></i>
+                  <p>HTML5</p>
+                </div>
+              </li>
+              <li>
+                <div class="list--box">
+                  <i class="devicon-css3-plain"></i>
+                  <p>CSS3</p>
+                </div>
+              </li>
+              <li>
+                <div class="list--box">
+                  <i class="devicon-sass-original"></i>
+                  <p>SASS</p>
+                </div>
+              </li>
+              <li>
+                <div class="list--box">
+                  <i class="devicon-git-plain"></i>
+                  <p>Git</p>
                 </div>
               </li>
             </ul>
