--- a/index.html
+++ b/index.html
@@ -88,9 +88,15 @@
         /></a>
         <nav class="navbar">
           <ul class="navbar__list">
-            <li><a href="#about">About</a></li>
-            <li><a href="#project">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li>
+              <a href="#about">.about<span>()</span></a>
+            </li>
+            <li>
+              <a href="#project">.projects<span>()</span></a>
+            </li>
+            <li>
+              <a href="#contact">.contact<span>()</span></a>
+            </li>
           </ul>
         </nav>
 
@@ -138,7 +144,7 @@
       <section class="wrapper" id="about">
         <div class="title" data-aos="fade-right" data-aos-duration="1200">
           <div class="title--style"></div>
-          <h3>About</h3>
+          <h3 class="title--text">&lt;about&gt;</h3>
         </div>
         <div class="grid about__grid">
           <div class="about__skill" data-aos="fade-in" data-aos-duration="1200">
@@ -221,32 +227,32 @@
             </ul>
           </div>
           <div class="about__des" data-aos="fade-left" data-aos-duration="1200">
+            <h6 class="about__const">const <em>rayan</em> =</h6>
             <p>
-              I have a multi-disciplinary approach to work. Leveraging my
-              previous background in design and project management, I am
-              committed to producing robust and elegant code that effectively
-              translates complex business concepts into feasible and measurable
-              objectives.I have worked across cultures and time zones managing
-              teams that are diverse and innovative. My work ethic is
-              characterized by hard work, reliability, creativity and a love for
-              problem-solving.
+              I'm passionate about bringing both the technical and visual
+              aspects of digital products to life. My previous background in
+              design and project management has taught me the importance of
+              effective communication, whether it's with your target user or
+              teammates. I am committed to producing solutions that translate
+              complex business concepts into feasible and measurable goals. I
+              have worked across cultures and time zones, managing diverse and
+              innovative teams.
             </p>
             <br />
 
             <p>
-              Currently I am actively seeking front-end application development
-              opportunities in environments where I can code the most innovative
-              ideas by bringing my treasure trove of experience, expertise, and
-              dedication to the table.
+              I'm happiest when I'm creating, learning, exploring, and thinking
+              about how to make things better. Currently, I am actively seeking
+              web development opportunities.
             </p>
             <br />
             <a
               class="about__resume"
               href="./assets/RayanMishraResume.pdf"
-              download-class="button"
               target="_blank"
-              >Download Resume</a
+              >Download &lt;Resume&gt;</a
             >
+            <h6 class="about__const">;</h6>
           </div>
         </div>
       </section>
@@ -256,7 +262,7 @@
       <section class="wrapper" id="project">
         <div class="title" data-aos="fade-right" data-aos-duration="1200">
           <div class="title--style"></div>
-          <h3>Projects</h3>
+          <h3 class="title--text">&lt;projects&gt;</h3>
         </div>
 
         <div class="grid project__grid">
@@ -293,8 +299,12 @@
               viewports using CSS grids and flexbox.
             </p>
             <div class="project__link">
-              <a href="https://organic-supermarket.netlify.app/">Live Site</a>
-              <a href="https://github.com/rayanmishra/organicEcommerceStore"
+              <a href="https://organic-supermarket.netlify.app/" target="_blank"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/rayanmishra/organicEcommerceStore"
+                target="_blank"
                 >View Code</a
               >
             </div>
@@ -322,8 +332,12 @@
             </p>
 
             <div class="project__link">
-              <a href="https://chat-app-rayan.netlify.app/">Live Site</a>
-              <a href="https://github.com/rayanmishra/chatApp-React"
+              <a href="https://chat-app-rayan.netlify.app/" target="_blank"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/rayanmishra/chatApp-React"
+                target="_blank"
                 >View Code</a
               >
             </div>
@@ -374,8 +388,14 @@
               information, and their scores, in Firebase.<br />
             </p>
             <div class="project__link">
-              <a href="https://robo-trivia-app.netlify.app/">Live Site</a>
-              <a href="https://github.com/rayanmishra/RoboTrivia">View Code</a>
+              <a href="https://robo-trivia-app.netlify.app/" target="_blank"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/rayanmishra/RoboTrivia"
+                target="_blank"
+                >View Code</a
+              >
             </div>
           </div>
           <!-- 4th -->
@@ -397,8 +417,12 @@
               using CSS grids and flexbox.
             </p>
             <div class="project__link">
-              <a href="https://tasty-practise.netlify.app/">Live Site</a>
-              <a href="https://github.com/rayanmishra/tasty-staticSite"
+              <a href="https://tasty-practise.netlify.app/" target="_blank"
+                >Live Site</a
+              >
+              <a
+                href="https://github.com/rayanmishra/tasty-staticSite"
+                target="_blank"
                 >View Code</a
               >
             </div>
@@ -420,8 +444,8 @@
       <section class="wrapper" id="contact">
         <div class="title" data-aos="fade-right" data-aos-duration="1200">
           <div class="title--style"></div>
-          <!-- <h3>Get in touch</h3> -->
-          <h3>Contact</h3>
+
+          <h3 class="title--text">&lt;contact&gt;</h3>
         </div>
         <div
           class="grid contact__grid"
